--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
     "require": {
         "php": ">=5.3.0"
     },
-	"autoload": {
-		"psr-0": {
-			"Worldpay": "./"
-		}
-	}
+    "autoload": {
+        "classmap": ["Worldpay.php"]
+    }
 }
