--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "An interface to the Worldpay payment system",
     "license": "MIT",
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "curl/curl": "1.1.3"
     },
     "autoload": {
         "classmap": ["Worldpay.php"]
