--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.0",
-        "curl/curl": "1.1.3"
+        "curl/curl": "~1.1"
     },
     "autoload": {
         "classmap": ["Worldpay.php"]
